clusters/t480s-k3s/apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
      name: http
